sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/SC_Segmento_Escalao__mdt.object-meta.xml
<CustomObject>
    <label>SC Escalão de Segmento</label>
    <pluralLabel>SC Escalões de Segmento</pluralLabel>
</CustomObject>