sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite retirar um escalao da avaliacao sem o apagar.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>