sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/fields/Minimo_Margem__c.field-meta.xml
<CustomField>
    <fullName>Minimo_Margem__c</fullName>
    <description>Margem ganha, em euros, a partir da qual a conta entra neste segmento no eixo da MARGEM. E&apos; margem em valor e nao em percentagem.</description>
    <label>Mínimo de Margem (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>