sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/fields/Minimo_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimo_Volume__c</fullName>
    <description>Valor de negocio ganho, em euros, a partir do qual a conta entra neste segmento no eixo do VOLUME. Definido pelo PVD a 06/07/2026 e aprovado pela Daniela a 31/07.</description>
    <label>Mínimo de Volume (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>