sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <description>Ordem de avaliacao, do escalao mais alto para o mais baixo: 1 e&apos; o Platina. NAO e&apos; decorativo: como cada registo tem dois minimos, o flow nao pode ordenar por valor e ordena por esta coluna. Trocar a ordem trocaria o resultado.</description>
    <label>Ordem de Avaliação</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>