sinalcabo/force-app/main/default/objects/SC_Segmento_Escalao__mdt/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <description>Nome do segmento tal como e&apos; gravado nos campos Segmento e Segmento (Margem) da conta: Bronze, Prata, Gold ou Platina. Tem de bater EXACTAMENTE com o valor da picklist, senao o flow grava um valor que a picklist restrita rejeita.</description>
    <label>Segmento</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>